[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-fleet"
version = "0.2.0"
description = "CI/CD pipeline + dashboard for AI coding agents (Claude Code, Cursor, Codex, etc.)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-socketio>=5.0",
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
agent-fleet = "agent_fleet.cli:main"

[tool.setuptools.package-data]
"agent_fleet" = ["templates/*.html"]

[project.urls]
Homepage = "https://github.com/hhhwdt/agent-fleet-pro"
Issues = "https://github.com/hhhwdt/agent-fleet-pro/issues"
